# MduX

./: .clang-format  .clang-tidy  .gitattributes  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  risk-assessment-templates.md
.github/workflows/: ci.yml
cmake/: AutomateVcpkg.cmake  CPM.cmake  CompilerSettings.cmake  CompilerWarnings.cmake  DisplayStatus.cmake  Doxygen.cmake  MduXConfig.cmake.in  StandardProjectSettings.cmake  StaticAnalyzers.cmake  VulkanHelper.cmake
docs/: MduX-IEC-62304-AI-Reference.md  MduX_IEC-62304-Software-Lifecycle-Framework.md  MduX_ISO-13485-Quality-Management-Framework.md  MduX_ISO-14971-Risk-Management-Framework.md
docs/adr/: ADR-001-multiplatform-graphics-framework.md  ADR-002-implementation-plan.md  ADR-002-testing-framework-selection.md  ADR-003-compiler-modernization.md  README.md  template.md
docs/iec62304/: 01-scope-and-classification.md  02-planning-and-requirements.md  03-design-architecture.md  04-implementation-testing.md  05-release-maintenance.md  06-supporting-processes.md  README.md
docs/iec62304/ai-automation-schemas/: README.md  safety-classification.schema.json  software-lifecycle-process.schema.json
docs/iec62304/code-examples/: README.md
docs/iec62304/code-examples/safety-classification/: safety_classifier.py
examples/: BasicExample.cpp  CMakeLists.txt  CubeFragmentShader.hpp  CubeShaders.hpp  CubeVertexShader.hpp  MduXExample.cpp  MedicalUiExample.cpp  README_CUBE_DEMO.md  SimpleMedicalUiExample.cpp  VulkanCubeRenderer.cpp  VulkanCubeRenderer.cppm  compile_shaders.sh  medical_interface.html  sample_ui.html  ui.html
examples/shaders/: cube_fragment.glsl
examples/shaders/compiled/: cube_fragment.spv
include/mdux/: CssParser.cpp  CssParser.hpp  FileWatcher.cpp  FileWatcher.hpp  HtmlCssLoader.cpp  HtmlCssLoader.hpp  mdux.cppm  mdux.hpp
inputs/: CompilerSettings.cmake  Linker.cmake  webfrontCmakelists.txt
inputs/Documentation/: IEC-62304-Complete.md  ISO-13485-Complete.md  Medical Device Cybersecurity for Engineers and Manufacturers.md
libstd/: readme.md
libstd/include/: algorithm  array  bitset  cassert  cctype  cerrno  cfenv  cfloat  chrono  climits  clocale  cstddef  cstdint  exception  functional  initializer_list  iterator  limits  memory  new  queue  random  ratio  stdexcept  string  string_view  thread  tuple  type_traits  utility  vector
libstd/include/h/: algorithm_binary.h  algorithm_heap.h  algorithm_merge.h  algorithm_minmax.h  algorithm_modifying.h  algorithm_other.h  algorithm_partitions.h  algorithm_sequence.h  algorithm_sorting.h  array.h  char_traits.h  default_delete.h  functional.h  functional_operators.h  functional_reference_wrapper.h  initializer_list.h  iterator.h  iterator_move.h  iterator_reverse.h  iterator_traits.h  iterator_utils.h  random_distributions.h  random_generators.h  traits_add.h  traits_operations.h  traits_primary_types.h  traits_references.h  unique_ptr.h  utility_declval.h
src/: mdux.cpp
tests/: CMakeLists.txt  ComplianceTestMain.cpp  TestCompliance.cpp  TestMain.cpp  TestRegulatoryCompliance.cpp  TestVersion.cpp
